# thumbnail-worker

./: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: d172ed8bfc4d_create_image_thumbnail_result_table.py
app/: main.py
app/config/: custom_logger.py  env_config.py
app/db/: database.py  models.py
app/message_queue/: aio_consumer.py  consume_message.py  publish_message.py
app/service/: detector.py  thumbnail_result.py  thumbnail_service.py  validation_result.py  validation_service.py
app/service/detector/: blank_detector.py
app/service/utils/: gray_filter.py
app/storage/: aio_boto.py
